Use ImmutableMap instead of Map because of Java 8